# basic_learn

./: .gitignore  README.md  new.txt  test  test.c  test.s  test.txt
.github/workflows/: assemble-x86_64.yml  learn.yml
.trae/documents/: plan-programming-basics.md
assemble/: README.md  add.s
assemble/legacy/: test.S
assemble/legacy/loop/: for.c
assemble/loop/: for.asm
assemble/x86_64/: Makefile
assemble/x86_64/01_basics/: hello_write.s
assemble/x86_64/03_data/: README.md  arrays.s  strings.s
assemble/x86_64/04_functions/: README.md
assemble/x86_64/06_syscalls/: syscall_table.s
assemble/x86_64/07_files/: input.txt
assembly/: README.md
assembly/x86_64/: README.md
c/: .test.c.swp  CMakeLists.txt  Makefile  README.md  a.out  datatype_test  datatype_test.c  pointer  pointer.c  test.c  test.s
c/array/: README.md  array_basics.c  array_operations.c  array_pointer.c  init_arr  init_arr.c  multidim_array.c  test  test.c  test1  test1.c
c/chapters/01_basics/: Makefile  main  main.c
c/gcc/attribute/: alias.c
c/math/: README.md  advanced_math.c  math_basics.c  test  test.c
c/preprocessor/: test.c
c/print/: README.md  advanced_formatting.c  format_specifiers.c  print_basics.c  test  test.c
c/std/: CMakeLists.txt  Makefile  README.md  assert_demo.c  ctype_demo.c  errno_demo.c  limits_demo.c  locale_demo.c  math_demo.c  setjmp_demo.c  signal_demo.c  stdarg_demo.c  stdbool_demo.c  stddef_demo.c  stdint_demo.c  stdio_demo.c  stdlib_demo.c  string_demo.c  time_demo.c
c/string/: README.md  string_basics.c  string_manipulation.c  string_operations.c  test  test.c
c/tmp/: test.c
cpp/: README.md
cpp/container/: multimap  multimap.cpp
cpp/cpptest/: CMakeLists.txt  README.md  auto_decltype.cpp  basic_types.cpp  class_basics.cpp  enum_class.cpp  exception_handling.cpp  file_stream.cpp  initializer_lists.cpp  lambda.cpp  nullptr_example.cpp  range_based_for.cpp  rvalue_move.cpp  smart_pointers.cpp  stl_examples.cpp  template_basics.cpp  thread_example.cpp  variadic_templates.cpp
cpp/design_mode/: adapter_mode  adapter_mode.cpp  builder  builder.cpp  chain  chain_of_respon.cpp  command  command.cpp  factory_method  factory_method.cpp  observer  observer.cpp  prototype  prototype.cpp  singleton  singleton.cpp  strategy  strategy.cpp  template_method  template_method.cpp
cpp/google_suites/benchmark_example/: .gitignore  CMakeLists.txt  README.md
cpp/google_suites/benchmark_example/src/: bench_suite.cc
cpp/google_suites/glog_example/: .gitignore  CMakeLists.txt  README.md
cpp/google_suites/glog_example/src/: logging_example.cc
cpp/google_suites/gtest_example/: CMakeLists.txt  README.md
cpp/google_suites/gtest_example/src/: calculator.cc  calculator.h
cpp/google_suites/gtest_example/tests/: calculator_test.cc
cpp/protobuf/: README.md  main.cpp  person.pb.cc  person.pb.h  person.proto
cpp/string/: test  test.cpp
cpp/uml_relation/: aggregation  aggregation.cpp  assotiation  assotiation.cpp  assotiation_class  assotiation_class.cpp  composition  composition.cpp  dependency  dependency.cpp  friendship  friendship.cpp  generalizaition  generalizaition.cpp  interface_realization  interface_realization.cpp  realization  realization.cpp  template_class  template_class.cpp
docs/: overview.md
docs/plantuml/: PacketAndRuleParse.wsd  probe.wsd  test.wsd  th_engine.wsd
drawio/: learn_drawio  未命名绘图.drawio
framework/grpc/demo/: CMakeLists.txt  client.cpp
frontend/snake-game/: index.html  script.js  style.css
frontend/vue3/: package-lock.json
gcc/attribute/: alias
gdblearn/: tempcatch.c
gdblearn/brkpoints/: condbrk  ignorbrk  main  main.c  savedbrks  tempbrk
gdblearn/catchpoint/: forkcatch  syscallcatch  vforkcatch  vforkcatch.c
gdblearn/func/: callfunc  callfunc.c  callfunc.debug  framefunc.c  stepfunc.c  tailcall  tailcall.c
gdblearn/print/: asciip.c  largearrp  localvarp  localvarp.c  memoryp  memoryp.c  readme
gdblearn/watchpoints/: readme  rwwa  rwwa.c  specthread.c
golang/: README.md  array.go  channel.go  const.go  defer.go  error.go  for.go  func.go  goroutine.go  hello.go  if.go  interface.go  map.go  method.go  package.go  pointer.go  recover.go  select.go  slice.go  struct.go  switch.go  test  variable.go
intel/: tsc_test  tsc_test.c
java/: HelloWorld.java  README.md  test.java
languages/: __init__.py
languages/go/: README.md
languages/javascript/: README.md
languages/python/: README.md
languages/rust/: Cargo.toml  README.md
linux/: .ifindex.c.swp  a.c  a.s  b.c  out.elf
linux/file/: hugepage_test  hugepage_test.c  test  test.c
linux/ipc/: read_pipe  read_pipe.c  write_pipe
linux/netlink/: test.c
linux/signal/: sig_alarm  sig_alarm.c  signaltest  signaltest.c
linux/syscall/: testmmap  testmmap.c  testsysconf.c
linux/sysconf/: 1  sysconf.c
linux/terminal/: test  test.c
linux/thread/: tls_test  tls_test.c
linux/time/: test  test.c
macro/: README.md  test.i
makefile/: README.md  b.txt  makefile  test.c
makefile/templates/: lkm.mk
markdown/: README.md  markdown_syntax_demo.md
mermaid/class_diagram/: main.cpp
plantuml/: thd1.wsd
python/: README.md  Untitled.ipynb
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
python/ai/: test.py
python/matplotlib/: 01_basic_plots.py  02_advanced_plots.py  03_styling_customization.py  04_statistical_plots.py  05_animation_interactive.py  06_professional_charts.py  README.md
python/scapy/: 01_basic_packet_demo.py  02_network_scanning_demo.py  03_packet_sniffing_demo.py  04_protocol_analysis_demo.py  05_attack_simulation_demo.py  06_wireless_analysis_demo.py  README.md  Untitled.ipynb  main.py  requirements.txt  tips.txt
python/scrapy/: README.md  requirements.txt  run_examples.py  scrapy.cfg
rust/: README.md  main
scripts/: run_all_tests.sh
scripts/sed/: README.md
scripts/shell/: test.sh
shell/: README.md  array_var.sh  dict_var.sh  for_loop.sh  parameter.sh  string_var.sh  while_loop.sh
shell/operator/: digit_op.sh  logic_op.sh
temp/: dev_pci_bj.txt  dev_pci_cd.txt  dev_pci_gf.txt  temp.txt
(+1560 files in other folders)
