cmake_minimum_required(VERSION 3.16)
project(c_examples LANGUAGES C)
set(CMAKE_C_STANDARD 17)
set(SRC_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB_RECURSE ALL_C "${SRC_ROOT}/*.c")
set(EXCLUDES "std/" "gcc/" "preprocessor/")
set(BIN_DIR "${CMAKE_BINARY_DIR}/bin")
file(MAKE_DIRECTORY "${BIN_DIR}")
foreach(src ${ALL_C})
  set(skip FALSE)
  if(src MATCHES "^${CMAKE_BINARY_DIR}(/|$)")
    set(skip TRUE)
  endif()
  foreach(ex ${EXCLUDES})
    if(src MATCHES "/${ex}")
      set(skip TRUE)
    endif()
  endforeach()
  if(skip)
    continue()
  endif()
  file(RELATIVE_PATH rel "${SRC_ROOT}" "${src}")
  string(REPLACE "/" "_" rel_underscore "${rel}")
  string(REGEX REPLACE "\\.c$" "" exe "${rel_underscore}")
  add_executable(${exe} "${src}")
  set_target_properties(${exe} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${BIN_DIR}")
  if(src MATCHES "/math/")
    target_link_libraries(${exe} m)
  endif()
endforeach()
