set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB STD_SRCS "${SRC_DIR}/*.c")
set(BIN_DIR "${CMAKE_BINARY_DIR}/bin")
file(MAKE_DIRECTORY "${BIN_DIR}")
set(M_LIB_TARGETS math_demo errno_demo setjmp_demo stdarg_demo)
foreach(src ${STD_SRCS})
  get_filename_component(name "${src}" NAME_WE)
  add_executable(${name} "${src}")
  set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${BIN_DIR}")
  list(FIND M_LIB_TARGETS "${name}" idx)
  if(NOT idx EQUAL -1)
    target_link_libraries(${name} m)
  endif()
endforeach()
